FIX: correct dependencies